Add images, new section and change style.css
Create new section Services

--- a/index.html
+++ b/index.html
@@ -61,6 +61,31 @@
             </div>
         </div>
     </section>
+    <section class="services">
+        <div class="container">
+            <div class="row">
+                <h2>Services</h2>
+                <h5>Services that we provide</h5>
+                <div class="col-lg-3 hyphen"> <img src="images/Quality.png" alt="Quality">
+                    <h3>High quality Design</h3>
+                    <p>Praesent metus urna, feugiata placerat elementum </p>
+                </div>
+                <div class="col-lg-3 hyphen"> <img src="images/Star.png" alt="Quality">
+                    <h3>Modern Design</h3>
+                    <p>Praesent metus urna, feugiata placerat elementum </p>
+                </div>
+                <div class="col-lg-3 hyphen"> <img src="images/Clock.png" alt="Quality">
+                    <h3>Regular update</h3>
+                    <p>Praesent metus urna, feugiata </p>
+                </div>
+                <div class="col-lg-3 hyphen"> <img src="images/Support.png" alt="Quality">
+                    <h3>Fast and free support</h3>
+                    <p>Praesent metus urna, feugiata placerat elementum </p>
+                </div>
+                <div class="hyphen"></div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
