--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@
             </div>
         </div>
     </section>
+    <section class="our-project">
+        <div class="container">
+            <div class="head">
+                <h2>Our project</h2>
+                <h5>What we create</h5> </div>
+            <nav>
+                <ul>
+                    <li> <a href="" alt="" class="">all</a> </li>
+                    <li> <a href="" alt="" class="project_link">photos</a> </li>
+                    <li> <a href="" alt="" class="project_link">branding</a> </li>
+                    <li> <a href="" alt="" class="project_link">adverts</a> </li>
+                    <li> <a href="" alt="" class="project_link">development</a> </li>
+                    <li> <a href="" alt="" class="project_link">misc</a> </li>
+                </ul>
+            </nav>
+        </div>
+    </section>
 </body>
 
 </html>
