Add new images and change index.html and style.css

--- a/index.html
+++ b/index.html
@@ -101,8 +101,53 @@
                     <li> <a href="" alt="" class="project_link">misc</a> </li>
                 </ul>
             </nav>
+            <div class="gallery">
+                <div class="row">
+                    <div class="col-lg-3 images"> <img src="images/Img1.jpg">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img2.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img3.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img4.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <!--
+    <section class="logos">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2"> <img src="images/Logo1.png" alt="logo"> </div>
+                <div class="col-lg-2"> <img src="images/Logo2.png" alt="logo"> </div>
+                <div class="col-lg-2"> <img src="images/Logo3.png" alt="logo"> </div>
+                <div class="col-lg-2"> <img src="images/Logo4.png" alt="logo"> </div>
+                <div class="col-lg-2"> <img src="images/Logo5.png" alt="logo"> </div>
+                <div class="col-lg-2"> <img src="images/Logo6.png" alt="logo"> </div>
+            </div>
+        </div>
+    </section>
+    <section class="tell-about-us">
+        <div class="container"> </div>
+    </section>
+-->
 </body>
 
 </html>
