Change index.html and style.css

--- a/index.html
+++ b/index.html
@@ -128,10 +128,62 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-lg-3 images"> <img src="images/Img5.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img6.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img7.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img8.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 images"> <img src="images/Img9.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img10.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img11.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 images"> <img src="images/Img12.png">
+                        <div class="description">
+                            <h3>About</h3>
+                            <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <button class="gallery-button">More projects</button>
         </div>
     </section>
-    <!--
     <section class="logos">
         <div class="container">
             <div class="row">
@@ -147,7 +199,6 @@
     <section class="tell-about-us">
         <div class="container"> </div>
     </section>
--->
 </body>
 
 </html>
