Change index.html and style.css, delete one photo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Awax</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css">
-    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </head>
 
 <body>
@@ -93,17 +93,17 @@
                 <h5>What we create</h5> </div>
             <nav>
                 <ul>
-                    <li> <a href="" alt="" class="">all</a> </li>
-                    <li> <a href="" alt="" class="project_link">photos</a> </li>
-                    <li> <a href="" alt="" class="project_link">branding</a> </li>
-                    <li> <a href="" alt="" class="project_link">adverts</a> </li>
-                    <li> <a href="" alt="" class="project_link">development</a> </li>
-                    <li> <a href="" alt="" class="project_link">misc</a> </li>
+                    <li class="project-list"> <a href="" alt="" class="our-line">all</a> </li>
+                    <li class="project-list"> <a href="" alt="" class="project-link our-line">photos</a> </li>
+                    <li class="project-list"> <a href="" alt="" class="project-link our-line">branding</a> </li>
+                    <li class="project-list"> <a href="" alt="" class="project-link our-line">adverts</a> </li>
+                    <li class="project-list"> <a href="" alt="" class="project-link our-line">development</a> </li>
+                    <li class="project-list"> <a href="" alt="" class="project-link our-line">misc</a> </li>
                 </ul>
             </nav>
             <div class="gallery">
                 <div class="row">
-                    <div class="col-lg-3 images"> <img src="images/Img1.jpg">
+                    <div class="col-lg-3 images"> <img src="images/Img1.png">
                         <div class="description">
                             <h3>About</h3>
                             <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
