Change index.html and style.css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Awax</title>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="style/style.css">
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </head>
 
 <body>
@@ -91,7 +91,7 @@
             <div class="head">
                 <h2>Our project</h2>
                 <h5>What we create</h5> </div>
-            <nav>
+            <nav class="project-nav">
                 <ul>
                     <li class="project-list"> <a href="" alt="" class="our-line">all</a> </li>
                     <li class="project-list"> <a href="" alt="" class="project-link our-line">photos</a> </li>
@@ -182,6 +182,35 @@
                 </div>
             </div>
             <button class="gallery-button">More projects</button>
+        </div>
+    </section>
+    <section class="our-team">
+        <div class="container">
+            <div class="row">
+                <h2>Our team</h2>
+                <h3>Our co-workers</h3>
+                <div class="col-lg-4 team-one"> <img src="images/Img_team_1.png">
+                    <div class="worker1">
+                        <h3>Jane Doe</h3>
+                        <p>Master mind</p>
+                    </div>
+                    <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
+                </div>
+                <div class="col-lg-4 team"> <img src="images/Img_team_2.png">
+                    <div class="worker2">
+                        <h3>Mike Shiller</h3>
+                        <p>Creative head</p>
+                    </div>
+                    <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
+                </div>
+                <div class="col-lg-4 team"> <img src="images/Img_team_3.png">
+                    <div class="worker3">
+                        <h3>Anna Johns</h3>
+                        <p>Technical lead</p>
+                    </div>
+                    <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="logos">
