Change index.html and style.css

--- a/index.html
+++ b/index.html
@@ -189,12 +189,14 @@
             <div class="row">
                 <h2>Our team</h2>
                 <h3>Our co-workers</h3>
-                <div class="col-lg-4 team-one"> <img src="images/Img_team_1.png">
-                    <div class="worker1">
-                        <h3>Jane Doe</h3>
-                        <p>Master mind</p>
+                <div class="col-lg-4 team-one">
+                    <div class="teams"><img src="images/Img_team_1.png">
+                        <div class="worker1">
+                            <h3>Jane Doe</h3>
+                            <p>Master mind</p>
+                        </div>
+                        <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
                     </div>
-                    <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
                 </div>
                 <div class="col-lg-4 team"> <img src="images/Img_team_2.png">
                     <div class="worker2">
