Add section .clients and change index.html and style.css

--- a/index.html
+++ b/index.html
@@ -191,26 +191,54 @@
                 <h3>Our co-workers</h3>
                 <div class="col-lg-4 team-one">
                     <div class="teams"><img src="images/Img_team_1.png">
-                        <div class="worker1">
+                        <div class="worker">
                             <h3>Jane Doe</h3>
                             <p>Master mind</p>
                         </div>
                         <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
                     </div>
                 </div>
-                <div class="col-lg-4 team"> <img src="images/Img_team_2.png">
-                    <div class="worker2">
-                        <h3>Mike Shiller</h3>
-                        <p>Creative head</p>
+                <div class="col-lg-4 team-two">
+                    <div class="teams"><img src="images/Img_team_2.png">
+                        <div class="worker">
+                            <h3>Mike Shiller</h3>
+                            <p>Creative head</p>
+                        </div>
+                        <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
                     </div>
-                    <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
                 </div>
-                <div class="col-lg-4 team"> <img src="images/Img_team_3.png">
-                    <div class="worker3">
-                        <h3>Anna Johns</h3>
-                        <p>Technical lead</p>
+                <div class="col-lg-4 team-three">
+                    <div class="teams"> <img src="images/Img_team_3.png">
+                        <div class="worker">
+                            <h3>Anna Johns</h3>
+                            <p>Technical lead</p>
+                        </div>
+                        <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
                     </div>
-                    <div class="team-social"> <i class="fa fa-twitter fa-icon" aria-hidden="true"></i> <i class="fa fa-instagram fa-icon" aria-hidden="true"></i> <i class="fa fa-linkedin fa-icon" aria-hidden="true"></i> <i class="fa fa-facebook fa-icon" aria-hidden="true"></i> <i class="fa fa-youtube-play fa-icon" aria-hidden="true"></i> <i class="fa fa-google-plus fa-icon" aria-hidden="true"></i> <i class="fa fa-ellipsis-h fa-icon" aria-hidden="true"></i> </div>
+                </div>
+                <div class="circle">
+                    <div class="circ circle1 active"></div>
+                    <div class="circ circle2"></div>
+                    <div class="circ circle3"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="clients">
+        <div class="container">
+            <div class="row">
+                <h2>Happy clients</h2>
+                <h3>Client reviews</h3>
+                <div class="col-lg-12 client"> <img src="images/Img_client.png">
+                    <h2>John Doe</h2>
+                    <h3>Head of PR Departament</h3> </div>
+                <div class="opinion"> <img src="images/quotes.png">
+                    <p>Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus.</p>
+                </div>
+                <div class="circle">
+                    <div class="circ circle1 active"></div>
+                    <div class="circ circle2"></div>
+                    <div class="circ circle3"></div>
                 </div>
             </div>
         </div>
