Change index.html and style.css
New section Price

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h2>Our project</h2>
                 <h5>What we create</h5> </div>
             <nav class="project-nav">
-                <ul>
+                <ul class="project-lists">
                     <li class="project-list"> <a href="" alt="" class="our-line">all</a> </li>
                     <li class="project-list"> <a href="" alt="" class="project-link our-line">photos</a> </li>
                     <li class="project-list"> <a href="" alt="" class="project-link our-line">branding</a> </li>
@@ -252,6 +252,74 @@
                 <div class="col-lg-2"> <img src="images/Logo4.png" alt="logo"> </div>
                 <div class="col-lg-2"> <img src="images/Logo5.png" alt="logo"> </div>
                 <div class="col-lg-2"> <img src="images/Logo6.png" alt="logo"> </div>
+            </div>
+        </div>
+    </section>
+    <section class="price">
+        <div class="container">
+            <div class="row">
+                <h2>Price</h2>
+                <h3>Pricing table</h3>
+                <div class="col-lg-3 price-offer">
+                    <div class="price-one">
+                        <p class="price-type">Express</p>
+                        <p class="price-cost">$ 9.99</p>
+                        <p class="price-month">month</p>
+                        <ul class="price-offer">
+                            <li class="offer-line">Tracking issues</li>
+                            <li class="offer-line">Add bugs through email</li>
+                            <li class="offer-line">Notifications</li>
+                            <li class="offer-line">Time tracking</li>
+                            <li class="offer-line">Custom views</li>
+                        </ul>
+                        <button class="price-button">Choose</button>
+                    </div>
+                </div>
+                <div class="col-lg-3 price-offer">
+                    <div class="price-two">
+                        <p class="price-type">Express</p>
+                        <p class="price-cost">$ 9.99</p>
+                        <p class="price-month">month</p>
+                        <ul class="price-offer">
+                            <li class="offer-line">Tracking issues</li>
+                            <li class="offer-line">Add bugs through email</li>
+                            <li class="offer-line">Notifications</li>
+                            <li class="offer-line">Time tracking</li>
+                            <li class="offer-line">Custom views</li>
+                        </ul>
+                        <button class="price-button">Choose</button>
+                    </div>
+                </div>
+                <div class="col-lg-3 price-offer">
+                    <div class="price-three">
+                        <p class="price-type">Express</p>
+                        <p class="price-cost">$ 9.99</p>
+                        <p class="price-month">month</p>
+                        <ul class="price-offer">
+                            <li class="offer-line">Tracking issues</li>
+                            <li class="offer-line">Add bugs through email</li>
+                            <li class="offer-line">Notifications</li>
+                            <li class="offer-line">Time tracking</li>
+                            <li class="offer-line">Custom views</li>
+                        </ul>
+                        <button class="price-button">Choose</button>
+                    </div>
+                </div>
+                <div class="col-lg-3 price-offer">
+                    <div class="price-four">
+                        <p class="price-type">Express</p>
+                        <p class="price-cost">$ 9.99</p>
+                        <p class="price-month">month</p>
+                        <ul class="price-offer">
+                            <li class="offer-line">Tracking issues</li>
+                            <li class="offer-line">Add bugs through email</li>
+                            <li class="offer-line">Notifications</li>
+                            <li class="offer-line">Time tracking</li>
+                            <li class="offer-line">Custom views</li>
+                        </ul>
+                        <button class="price-button">Choose</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
