Change navigation section our-project

--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
             <div class="row">
                 <h2>Price</h2>
                 <h3>Pricing table</h3>
-                <div class="col-lg-3 price-offer">
-                    <div class="price-one">
+                <div class="col-lg-3 price-one">
+                    <div class="price-offer">
                         <p class="price-type">Express</p>
                         <p class="price-cost">$ 9.99</p>
                         <p class="price-month">month</p>
@@ -275,8 +275,8 @@
                         <button class="price-button">Choose</button>
                     </div>
                 </div>
-                <div class="col-lg-3 price-offer">
-                    <div class="price-two">
+                <div class="col-lg-3 price-two">
+                    <div class="price-offer">
                         <p class="price-type">Express</p>
                         <p class="price-cost">$ 9.99</p>
                         <p class="price-month">month</p>
@@ -290,8 +290,8 @@
                         <button class="price-button">Choose</button>
                     </div>
                 </div>
-                <div class="col-lg-3 price-offer">
-                    <div class="price-three">
+                <div class="col-lg-3 price-three">
+                    <div class="price-offer">
                         <p class="price-type">Express</p>
                         <p class="price-cost">$ 9.99</p>
                         <p class="price-month">month</p>
@@ -305,8 +305,8 @@
                         <button class="price-button">Choose</button>
                     </div>
                 </div>
-                <div class="col-lg-3 price-offer">
-                    <div class="price-four">
+                <div class="col-lg-3 price-four">
+                    <div class="price-offer">
                         <p class="price-type">Express</p>
                         <p class="price-cost">$ 9.99</p>
                         <p class="price-month">month</p>
