Change section price

--- a/index.html
+++ b/index.html
@@ -66,23 +66,25 @@
             <div class="row">
                 <h2>Services</h2>
                 <h5>Services that we provide</h5>
-                <div class="col-lg-3 hyphen"> <img src="images/Quality.png" alt="Quality">
-                    <h3>High quality Design</h3>
-                    <p>Praesent metus urna, feugiata placerat elementum </p>
+                <div class="services-offer">
+                    <div class="col-lg-3 hyphen hyphen-left"> <img src="images/Quality.png" alt="Quality">
+                        <h3>High quality Design</h3>
+                        <p>Praesent metus urna, feugiata placerat elementum </p>
+                    </div>
+                    <div class="col-lg-3 hyphen"> <img src="images/Star.png" alt="Quality">
+                        <h3>Modern Design</h3>
+                        <p>Praesent metus urna, feugiata placerat elementum </p>
+                    </div>
+                    <div class="col-lg-3 hyphen"> <img src="images/Clock.png" alt="Quality">
+                        <h3>Regular update</h3>
+                        <p>Praesent metus urna, feugiata placerat elementum </p>
+                    </div>
+                    <div class="col-lg-3 hyphen"> <img src="images/Support.png" alt="Quality">
+                        <h3>Fast and free support</h3>
+                        <p>Praesent metus urna, feugiata placerat elementum </p>
+                    </div>
+                    <div class="hyphen"></div>
                 </div>
-                <div class="col-lg-3 hyphen"> <img src="images/Star.png" alt="Quality">
-                    <h3>Modern Design</h3>
-                    <p>Praesent metus urna, feugiata placerat elementum </p>
-                </div>
-                <div class="col-lg-3 hyphen"> <img src="images/Clock.png" alt="Quality">
-                    <h3>Regular update</h3>
-                    <p>Praesent metus urna, feugiata </p>
-                </div>
-                <div class="col-lg-3 hyphen"> <img src="images/Support.png" alt="Quality">
-                    <h3>Fast and free support</h3>
-                    <p>Praesent metus urna, feugiata placerat elementum </p>
-                </div>
-                <div class="hyphen"></div>
             </div>
         </div>
     </section>
@@ -264,7 +266,7 @@
                     <div class="price-offer">
                         <p class="price-type">Express</p>
                         <p class="price-cost">$ 9.99</p>
-                        <p class="price-month">month</p>
+                        <p class="price-month">/month</p>
                         <ul class="price-offer">
                             <li class="offer-line">Tracking issues</li>
                             <li class="offer-line">Add bugs through email</li>
@@ -277,9 +279,9 @@
                 </div>
                 <div class="col-lg-3 price-two">
                     <div class="price-offer">
-                        <p class="price-type">Express</p>
+                        <p class="price-type">Standard</p>
                         <p class="price-cost">$ 9.99</p>
-                        <p class="price-month">month</p>
+                        <p class="price-month">/month</p>
                         <ul class="price-offer">
                             <li class="offer-line">Tracking issues</li>
                             <li class="offer-line">Add bugs through email</li>
@@ -292,9 +294,9 @@
                 </div>
                 <div class="col-lg-3 price-three">
                     <div class="price-offer">
-                        <p class="price-type">Express</p>
+                        <p class="price-type">Luxe</p>
                         <p class="price-cost">$ 9.99</p>
-                        <p class="price-month">month</p>
+                        <p class="price-month">/month</p>
                         <ul class="price-offer">
                             <li class="offer-line">Tracking issues</li>
                             <li class="offer-line">Add bugs through email</li>
@@ -307,9 +309,9 @@
                 </div>
                 <div class="col-lg-3 price-four">
                     <div class="price-offer">
-                        <p class="price-type">Express</p>
+                        <p class="price-type">Premium</p>
                         <p class="price-cost">$ 9.99</p>
-                        <p class="price-month">month</p>
+                        <p class="price-month">/month</p>
                         <ul class="price-offer">
                             <li class="offer-line">Tracking issues</li>
                             <li class="offer-line">Add bugs through email</li>
