Add section price and premium

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <div class="col-lg-3 price-two">
                     <div class="price-offer">
                         <p class="price-type">Standard</p>
-                        <p class="price-cost">$ 9.99</p>
+                        <p class="price-cost">$ 14.99</p>
                         <p class="price-month">/month</p>
                         <ul class="price-offer">
                             <li class="offer-line">Tracking issues</li>
@@ -295,7 +295,7 @@
                 <div class="col-lg-3 price-three">
                     <div class="price-offer">
                         <p class="price-type">Luxe</p>
-                        <p class="price-cost">$ 9.99</p>
+                        <p class="price-cost">$ 19.99</p>
                         <p class="price-month">/month</p>
                         <ul class="price-offer">
                             <li class="offer-line">Tracking issues</li>
@@ -310,7 +310,7 @@
                 <div class="col-lg-3 price-four">
                     <div class="price-offer">
                         <p class="price-type">Premium</p>
-                        <p class="price-cost">$ 9.99</p>
+                        <p class="price-cost">$ 24.99</p>
                         <p class="price-month">/month</p>
                         <ul class="price-offer">
                             <li class="offer-line">Tracking issues</li>
@@ -323,6 +323,43 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="premium">
+        <div class="container premium-line">
+            <h2>Premium</h2>
+            <h3>Even more features available</h3>
+            <div class="row premium-border">
+                <div class="col-lg-5 premium-btn"> <img src="images/premium.png" alt="premium image" /> </div>
+                <div class="col-lg-7">
+                    <div class="row">
+                        <div class="col-lg-1">
+                            <div class="premium-one"> <img src="images/icon.png" /></div>
+                            <div class="premium-two"> <img src="images/icon.png" /></div>
+                            <div class="premium-three"> <img src="images/icon.png" /></div>
+                        </div>
+                        <div class="col-lg-6 premium-list">
+                            <h2>First feature</h2>
+                            <p>Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est.</p>
+                            <ul class="premium-lists">
+                                <li class="premium-point">feature one</li>
+                                <li class="premium-point">feature two</li>
+                                <li class="premium-point">feature three</li>
+                            </ul>
+                            <h2>Second feature</h2>
+                            <p>Praesent metus urna, feugiat a placerat vel</p>
+                            <h2>Third feature</h2>
+                            <p>Praesent metus urna, feugiat a placerat vel elementum at leo.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="circle">
+                <div class="circ circle1 active"></div>
+                <div class="circ circle2"></div>
+                <div class="circ circle3"></div>
+            </div>
+            <button class="premium-button">Get in touch</button>
         </div>
     </section>
     <section class="tell-about-us">
