Add section some-facts

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Awax</title>
-    <link type="text/css" rel="stylesheet" href="style/style.css">
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </head>
 
 <body>
@@ -362,8 +362,49 @@
             <button class="premium-button">Get in touch</button>
         </div>
     </section>
+    <section class="some-facts">
+        <div class="container">
+            <h2>Some Facts</h2>
+            <h3>About our work</h3>
+            <div class="row facts-numbers">
+                <div class="col-lg-3 design">
+                    <p class="facts-number">1000</p>
+                    <p class="facts-type">Design projects released</p>
+                    <p class="facts-paragraph">Praesent metus urna, feugiat a placerat elementum at leo</p>
+                </div>
+                <div class="col-lg-3 photos">
+                    <p class="facts-number">900</p>
+                    <p class="facts-type">Photos</p>
+                    <p class="facts-paragraph">Praesent metus urna, feugiat a placerat elementum at leo</p>
+                </div>
+                <div class="col-lg-3 marketing">
+                    <p class="facts-number">500</p>
+                    <p class="facts-type">Marketing ideas</p>
+                    <p class="facts-paragraph">Praesent metus urna, feugiat a placerat elementum at leo</p>
+                </div>
+                <div class="col-lg-3 exhibitions">
+                    <p class="facts-number">100</p>
+                    <p class="facts-type">Exhibitions</p>
+                    <p class="facts-paragraph">Praesent metus urna, feugiat a placerat elementum at leo</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="tell-about-us">
-        <div class="container"> </div>
+        <div class="container">
+            <div class="share-image"> <img src="images/Share.png" alt="share about us" />
+                <p>tell about us:</p>
+            </div>
+            <div class="share-social">
+                <div class="share-icons"> <i class="fa fa-twitter fa-icons" aria-hidden="true"></i>
+                    <p> 152</p> <i class="fa fa-linkedin fa-icons" aria-hidden="true"></i>
+                    <p> 31</p> <i class="fa fa-facebook fa-icons" aria-hidden="true"></i>
+                    <p> 165</p> <i class="fa fa-google-plus fa-icons" aria-hidden="true"></i>
+                    <p> 22</p> <i class="fa fa-pinterest-p fa-icons" aria-hidden="true"></i>
+                    <p> 165</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
